# crypto-bot-rust

./: .gitignore  .gitmodules  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.arm64  Pipfile  README.md  config.bot.yaml  cron-settings.crontab  deploy.py  deploy.sh
.cargo/: config.toml
.devcontainer/: devcontainer.json
immortal/: crawler_binance.yml  crawler_binance_btcusdt_spot.yml  crawler_bitflyer.yml  crawler_bitflyer_spot.yml  crawler_coincheck.yml  crawler_gmo.yml  shannon_gmo.yml  tracing_mm_bitflyer.yml  tracing_mm_coincheck.yml  wrapped_cmd.sh
src/: config.rs  error_types.rs  global_vars.rs  lib.rs  logger.rs  main.rs  order_types.rs  symbol.rs
src/client/: auth.rs  binance.rs  bitflyer.rs  coincheck.rs  credentials.rs  gmo.rs  mail.rs  method.rs  mod.rs  tachibana.rs  types.rs
src/data_structure/: float_exp.rs  mod.rs  num_utils.rs  time_queue.rs
src/strategy/: abcdf_tachibana.rs  crawler_binance.rs  crawler_bitflyer.rs  crawler_coincheck.rs  crawler_gmo.rs  mod.rs  shannon_gmo.rs  tracingmm_bitflyer.rs  tracingmm_coincheck.rs
src/utils/: dataframe.rs  draw.rs  draw_orderbook.rs  json_utils.rs  kline_mmap.rs  mod.rs  orderbook_repository.rs  record_writer.rs  reserved_orders.rs  serde.rs  status_repository.rs  strategy_utils.rs  time.rs  tracingmm_utils.rs  useful_traits.rs
test/: immortalctl_status_output.txt  mm_atr_polars_params.json
