[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
labo = { path = "labo", features = ["single_output", "zstd"]}
async-trait = "0.1.68"
clap = { version = "4.2.4", features = ["derive"] }
easy-ext = "1.0.1"
hex = "0.4.3"
hyper = "0.14.26"
lettre = { version = "0.10.4", features = ["rustls-tls"] }
log = { version = "0.4.17", features = ["std"] }
maplit = "1.0.2"
once_cell = "1.17.1"
parking_lot = "0.12.1"
reqwest = { version = "0.11.16", features = ["json", "rustls-tls"] }
ring = "0.16.20"
serde = { version = "1.0.158", features = ["derive"] }
serde_yaml = "0.9.21"
strum = { version = "0.25", features = ["derive"] }
rmp = "0.8.11"
tap = "1.0.1"
tokio = { version = "1.27.0", features = ["full"] }
tokio-tungstenite = { version = "0.18.0", features = ["rustls-tls-webpki-roots"] }
tokio-stream = "0.1.14"
url = "2.3.1"
futures = { version = "0.3.28", default-features = true }
memmap = "0.7.0"
uuid =  { version = "1.4.0", features = ["v4", "fast-rng" ] }
duct = "0.13.6"
ordered-float = "3.7.0"
crossterm = "0.26.1"
percent-encoding = "2.3.1"
encoding_rs = "0.8.33"
thiserror = "1.0.56"
anyhow = { version = "1.0.79", features = ["backtrace"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
# https://stackoverflow.com/questions/70787157/how-to-trace-errors-when-using-anyhow
debug = true

